renaming of FabricCLI to CloudShell

--- a/Workload/Manifest/assets/locales/en-US/translations.json
+++ b/Workload/Manifest/assets/locales/en-US/translations.json
@@ -13,8 +13,8 @@
     "OneLakeExplorerItem_DisplayName": "OneLake Explorer",
     "OneLakeExplorerItem_DisplayName_Plural": "OneLake Explorers",
     "OneLakeExplorerItem_Description": "An item that provides OneLake file exploration and editing capabilities.",
-    "FabricCLIItem_DisplayName": "Fabric CLI",
-    "FabricCLIItem_DisplayName_Plural": "Fabric CLIs",
-    "FabricCLIItem_Description": "Interactive Fabric CLI for executing commands and SQL queries against lakehouse data."   
+    "CloudShellItem_DisplayName": "Cloud Shell",
+    "CloudShellItem_DisplayName_Plural": "Cloud Shells",
+    "CloudShellItem_Description": "Interactive Cloud Shell for executing commands (Fabric CLI, Bash or Python) or Python scripts."   
 }
 
