--- a/Workload/app/assets/locales/en-US/translation.json
+++ b/Workload/app/assets/locales/en-US/translation.json
@@ -21,56 +21,56 @@
     "HelloWorldItemEditor_Definition_Message_Label": "Item Definition",
     "HelloWorldItemEditorEmpty_Message": "Let's say hello to {{itemName}}!",
     "HelloWorldItemEditorEmpty_Button": "Save item",
-    "FabricCLIItem_EmptyState_Title": "Welcome to Fabric CLI",
-    "FabricCLIItem_EmptyState_Description": "Execute Spark commands and SQL queries interactively against your lakehouse data.",
-    "FabricCLIItem_EmptyState_Instructions": "Click 'Start Terminal' to begin your Spark session and start executing commands.",
-    "FabricCLIItem_Features_Title": "Features:",
-    "FabricCLIItem_Connecting": "Connecting...",
-    "FabricCLIItem_StopSession": "Stop Session",
-    "FabricCLIItem_History": "History",
-    "FabricCLIItem_Clear": "Clear",
-    "FabricCLIItem_Loading": "Loading Fabric CLI...",
-    "FabricCLIItem_LoadError_Title": "Failed to Load Item",
-    "FabricCLIItem_LoadError_Message": "Could not load the Fabric CLI item.",
-    "FabricCLIItem_SaveSuccess_Title": "Saved",
-    "FabricCLIItem_SaveSuccess_Message": "Fabric CLI configuration saved successfully.",
-    "FabricCLIItem_SaveError_Title": "Save Failed",
-    "FabricCLIItem_SaveError_Message": "Could not save the Fabric CLI configuration.",
-    "FabricCLIItem_SelectLakehouse": "Select Lakehouse",
-    "FabricCLIItem_SelectLakehouse_Success": "Connected to lakehouse: {{lakehouseName}}",
-    "FabricCLIItem_SelectLakehouse_Error": "Could not select lakehouse.",
-    "FabricCLIItem_SelectEnvironment": "Select Environment",
-    "FabricCLIItem_SelectEnvironment_Success": "Selected Spark Environment: {{environmentName}}",
-    "FabricCLIItem_SelectEnvironment_Error": "Could not save environment selection.",
-    "FabricCLIItem_StartTerminal": "Start Session",
-    "FabricCLIItem_StopTerminal": "Stop Session",
-    "FabricCLIItem_ClearTerminal": "Clear Terminal",
-    "FabricCLIItem_History_Title": "Command History",
-    "FabricCLIItem_ExecutionMode_Native": "Native Python",
-    "FabricCLIItem_ExecutionMode_Subprocess": "Subprocess",
-    "FabricCLIItem_ExecutionMode_FabCLI": "Fabric CLI",
-    "FabricCLIItem_CommandSuccess": "Command executed successfully",
-    "FabricCLIItem_NoEnvironmentSelected": "Please select a Spark environment before starting the session.",
-    "FabricCLIItem_UnsavedChanges": "Configuration changes will be saved automatically...",
-    "FabricCLIItem_Scripts_Panel_Title": "Scripts",
-    "FabricCLIItem_Scripts_Title": "Scripts",
-    "FabricCLIItem_Scripts_Description": "Python scripts for execution",
-    "FabricCLIItem_Scripts_CreateNew": "Create new script",
-    "FabricCLIItem_Scripts_CreateDialog_Title": "Create New Python Script",
-    "FabricCLIItem_Scripts_CreateDialog_Placeholder": "script_name.py",
-    "FabricCLIItem_Scripts_CreateDialog_Cancel": "Cancel",
-    "FabricCLIItem_Scripts_CreateDialog_Create": "Create",
-    "FabricCLIItem_Scripts_Delete": "Delete script",
-    "FabricCLIItem_Scripts_DeleteDialog_Title": "Delete Script?",
-    "FabricCLIItem_Scripts_DeleteDialog_Message": "Are you sure you want to delete \"{{scriptName}}\"? This action cannot be undone.",
-    "FabricCLIItem_Scripts_DeleteDialog_Cancel": "Cancel",
-    "FabricCLIItem_Scripts_DeleteDialog_Delete": "Delete",
-    "FabricCLIItem_Script_Save": "Save",
-    "FabricCLIItem_Script_SaveTooltip": "Save script changes",
-    "FabricCLIItem_Script_NoChanges": "No changes to save",
-    "FabricCLIItem_Script_Run": "Run",
-    "FabricCLIItem_Script_Running": "Running...",
-    "FabricCLIItem_Script_RunTooltip": "Run this script in the terminal",
-    "FabricCLIItem_Script_Running_Message": "Running script: {{scriptName}}"
+    "CloudShellItem_EmptyState_Title": "Welcome to Fabric Cloud Shell",
+    "CloudShellItem_EmptyState_Description": "Execute Spark commands and SQL queries interactively against your lakehouse data.",
+    "CloudShellItem_EmptyState_Instructions": "Click 'Start Terminal' to begin your Spark session and start executing commands.",
+    "CloudShellItem_Features_Title": "Features:",
+    "CloudShellItem_Connecting": "Connecting...",
+    "CloudShellItem_StopSession": "Stop Session",
+    "CloudShellItem_History": "History",
+    "CloudShellItem_Clear": "Clear",
+    "CloudShellItem_Loading": "Loading Fabric Cloud Shell...",
+    "CloudShellItem_LoadError_Title": "Failed to Load Item",
+    "CloudShellItem_LoadError_Message": "Could not load the Fabric Cloud Shell item.",
+    "CloudShellItem_SaveSuccess_Title": "Saved",
+    "CloudShellItem_SaveSuccess_Message": "Fabric Cloud Shell configuration saved successfully.",
+    "CloudShellItem_SaveError_Title": "Save Failed",
+    "CloudShellItem_SaveError_Message": "Could not save the Fabric Cloud Shell configuration.",
+    "CloudShellItem_SelectLakehouse": "Select Lakehouse",
+    "CloudShellItem_SelectLakehouse_Success": "Connected to lakehouse: {{lakehouseName}}",
+    "CloudShellItem_SelectLakehouse_Error": "Could not select lakehouse.",
+    "CloudShellItem_SelectEnvironment": "Select Environment",
+    "CloudShellItem_SelectEnvironment_Success": "Selected Spark Environment: {{environmentName}}",
+    "CloudShellItem_SelectEnvironment_Error": "Could not save environment selection.",
+    "CloudShellItem_StartTerminal": "Start Session",
+    "CloudShellItem_StopTerminal": "Stop Session",
+    "CloudShellItem_ClearTerminal": "Clear Terminal",
+    "CloudShellItem_History_Title": "Command History",
+    "CloudShellItem_ExecutionMode_Python": "Python",
+    "CloudShellItem_ExecutionMode_Bash": "Bash",
+    "CloudShellItem_ExecutionMode_FabCLI": "Fabric CLI",
+    "CloudShellItem_CommandSuccess": "Command executed successfully",
+    "CloudShellItem_NoEnvironmentSelected": "Please select a Spark environment before starting the session.",
+    "CloudShellItem_UnsavedChanges": "Configuration changes will be saved automatically...",
+    "CloudShellItem_Scripts_Panel_Title": "Scripts",
+    "CloudShellItem_Scripts_Title": "Scripts",
+    "CloudShellItem_Scripts_Description": "Python scripts for execution",
+    "CloudShellItem_Scripts_CreateNew": "Create new script",
+    "CloudShellItem_Scripts_CreateDialog_Title": "Create New Python Script",
+    "CloudShellItem_Scripts_CreateDialog_Placeholder": "script_name.py",
+    "CloudShellItem_Scripts_CreateDialog_Cancel": "Cancel",
+    "CloudShellItem_Scripts_CreateDialog_Create": "Create",
+    "CloudShellItem_Scripts_Delete": "Delete script",
+    "CloudShellItem_Scripts_DeleteDialog_Title": "Delete Script?",
+    "CloudShellItem_Scripts_DeleteDialog_Message": "Are you sure you want to delete \"{{scriptName}}\"? This action cannot be undone.",
+    "CloudShellItem_Scripts_DeleteDialog_Cancel": "Cancel",
+    "CloudShellItem_Scripts_DeleteDialog_Delete": "Delete",
+    "CloudShellItem_Script_Save": "Save",
+    "CloudShellItem_Script_SaveTooltip": "Save script changes",
+    "CloudShellItem_Script_NoChanges": "No changes to save",
+    "CloudShellItem_Script_Run": "Run",
+    "CloudShellItem_Script_Running": "Running...",
+    "CloudShellItem_Script_RunTooltip": "Run this script in the terminal",
+    "CloudShellItem_Script_Running_Message": "Running script: {{scriptName}}"
 }
   
