Updating the Cloud shell to allow FabCLI scripts. Implementing new facotry patterns for commands and different script types. Updated documenation

--- a/Workload/app/assets/locales/en-US/translation.json
+++ b/Workload/app/assets/locales/en-US/translation.json
@@ -56,8 +56,7 @@
     "CloudShellItem_Scripts_Title": "Scripts",
     "CloudShellItem_Scripts_Description": "Python scripts for execution",
     "CloudShellItem_Scripts_CreateNew": "Create new script",
-    "CloudShellItem_Scripts_CreateDialog_Title": "Create New Python Script",
-    "CloudShellItem_Scripts_CreateDialog_Placeholder": "script_name.py",
+    "CloudShellItem_Scripts_CreateDialog_Title": "Create New Script",
     "CloudShellItem_Scripts_CreateDialog_Cancel": "Cancel",
     "CloudShellItem_Scripts_CreateDialog_Create": "Create",
     "CloudShellItem_Scripts_Delete": "Delete script",
