--- a/Workload/app/assets/locales/en-US/translation.json
+++ b/Workload/app/assets/locales/en-US/translation.json
@@ -54,7 +54,7 @@
     "CloudShellItem_UnsavedChanges": "Configuration changes will be saved automatically...",
     "CloudShellItem_Scripts_Panel_Title": "Scripts",
     "CloudShellItem_Scripts_Title": "Scripts",
-    "CloudShellItem_Scripts_Description": "Python scripts for execution",
+    "CloudShellItem_Scripts_Description": "Create a scripts for execution",
     "CloudShellItem_Scripts_CreateNew": "Create new script",
     "CloudShellItem_Scripts_CreateDialog_Title": "Create New Script",
     "CloudShellItem_Scripts_CreateDialog_Cancel": "Cancel",
